--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
       <artifactId>jsonassert</artifactId>
       <version>1.5.0</version>
     </dependency>
+    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.10.3</version>
+    </dependency>
 
   </dependencies>
 
