--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     </dependency>
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
-      <artifactId>json-path</artifactId>
+      <artifactId>json-path-assert</artifactId>
       <version>2.4.0</version>
     </dependency>
 
