--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,6 @@
     <url>https://github.com/nablarch/${project.artifactId}/tree/master</url>
   </scm>
 
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-
   <parent>
     <groupId>com.nablarch</groupId>
     <artifactId>nablarch-parent</artifactId>
@@ -37,6 +32,12 @@
       </exclusions>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
