--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,9 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- jmockit は junit より上に配置する必要がある -->
     <dependency>
-      <groupId>org.jmockit</groupId>
-      <artifactId>jmockit</artifactId>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
       <scope>test</scope>
     </dependency>
 
